# update-risk

./: .gitignore  LICENSE  README.md  app.py  requirements.txt
cli/: README.md
server/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
server/src/: config.py  main.py
server/src/controllers/: data_extraction_controller.py
server/src/models/: incident_model.py
server/src/mongo/: client.py  collections.py
server/src/prompts/: data_classifier_prompt.py
server/src/routers/: base.py  fetch_incidents_route.py  health.py
server/src/schema/: incident_request_schema.py
server/src/services/: cronjob.py  db_incident_service.py  groq_llm_service.py  incident_search_service.py  reddit_content_fetch_controller.py
server/src/utils/: formatter.py
src/config/: config.py
src/cronjob/: reddit_cronjob.py
src/scripts/: reddit.ipynb
src/services/: groq_llm_service.py
