[project]
name = "update_risk_server"
version = "0.1.0"
description = "Analyze your package update risk"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.4",
    "groq>=1.0.0",
    "pydantic-settings>=2.12.0",
    "apscheduler>=3.10.4",
    "requests>=2.32.0",
]
